--- a/Studyplusいいね特化.ipynb
+++ b/Studyplusいいね特化.ipynb
@@ -173,6 +173,33 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
+        "id": "3IvAk_RuY_1i"
+      },
+      "outputs": [],
+      "source": [
+        "# @title 自分のタイムラインに指定した個数いいね {display-mode:\"form\"}\n",
+        "種類=\"\\u5B9A\\u671F\\u30C6\\u30B9\\u30C8 \\u6210\\u7E3E\\u30A2\\u30C3\\u30D7\"#@param [\"フォロー中\",\"定期テスト 成績アップ\"]\n",
+        "if 種類==\"定期テスト 成績アップ\":\n",
+        "  timeline_url=\"study_goal/test\"\n",
+        "elif 種類==\"フォロー中\":\n",
+        "  timeline_url=\"followee\"\n",
+        "json=requests.get(\"https://api.studyplus.jp/2/timeline_feeds/\"+timeline_url,cookies=sp.cookies,headers=sp.headers).json()\n",
+        "個数_30個単位=300#@param {type:\"number\"}\n",
+        "\n",
+        "for i in range(0,個数_30個単位//30):\n",
+        "  for record in json[\"feeds\"]:\n",
+        "    try:\n",
+        "      record.pop(\"feed_type\")\n",
+        "      requests.post(\"https://api.studyplus.jp/2/timeline_events/\"+str(list(record.values())[0][\"event_id\"])+\"/likes/like\",cookies=sp.cookies,headers=sp.headers).json()\n",
+        "    except:\n",
+        "      continue\n",
+        "  json=requests.get(\"https://api.studyplus.jp/2/timeline_feeds/\"+timeline_url+\"?until=\"+json[\"next\"],cookies=sp.cookies,headers=sp.headers).json()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
         "colab": {
           "background_save": true
         },
