--- a/志望校分離.ipynb
+++ b/志望校分離.ipynb
@@ -183,6 +183,38 @@
         "  timeline_url=\"study_goal/test\"\n",
         "elif 種類==\"フォロー中\":\n",
         "  timeline_url=\"followee\"\n",
+          "elif 種類==\"英検準1級\":\n",
+        "  timeline_url=\"study_goal/english-eiken-jun1\"\n",
+          "elif 種類==\"英検2級\":\n",
+        "  timeline_url=\"study_goal/english-eiken-2\"\n",
+          "elif 種類==\"その他趣味・教養\":\n",
+        "  timeline_url=\"study_goal/hobby-etc\"\n",
+          "elif 種類==\"その他\":\n",
+        "  timeline_url=\"study_goal/skill-etc\"\n",
+        "elif 種類==\"北海道大学\":\n",
+        "  timeline_url=\"study_goal/college-5\"\n",
+        "elif 種類==\"筑波大学\":\n",
+        "  timeline_url=\"study_goal/college-86\"\n",
+        "elif 種類==\"千葉大学\":\n",
+        "  timeline_url=\"study_goal/college-147\"\n",
+        "elif 種類==\"名古屋大学\":\n",
+        "  timeline_url=\"study_goal/college-428\"\n",
+        "elif 種類==\"大阪大学\":\n",
+        "  timeline_url=\"study_goal/college-524\"\n",
+        "elif 種類==\"神戸大学\":\n",
+        "  timeline_url=\"study_goal/college-578\"\n",
+        "elif 種類==\"広島大学\":\n",
+        "  timeline_url=\"study_goal/college-653\"\n",
+        "elif 種類==\"九州大学\":\n",
+        "  timeline_url=\"study_goal/college-699\"\n",
+        "elif 種類==\"東京大学\":\n",
+        "  timeline_url=\"study_goal/college-180\"\n",
+        "elif 種類==\"京都大学\":\n",
+        "  timeline_url=\"study_goal/college-491\"\n",
+        "elif 種類==\"慶應義塾大学\":\n",
+        "  timeline_url=\"study_goal/college-207\"\n",
+        "elif 種類==\"早稲田大学\":\n",
+        "  timeline_url=\"study_goal/college-304\"\n",
         "json=requests.get(\"https://api.studyplus.jp/2/timeline_feeds/\"+timeline_url,cookies=sp.cookies,headers=sp.headers).json()\n",
         "個数_30個単位=240#@param {type:\"number\"}\n",
         "\n",
