--- a/志望校分離.ipynb
+++ b/志望校分離.ipynb
@@ -178,7 +178,7 @@
       "outputs": [],
       "source": [
         "# @title 自分のタイムラインに指定した個数いいね {display-mode:\"form\"}\n",
-        "種類=\"\\u5B9A\\u671F\\u30C6\\u30B9\\u30C8 \\u6210\\u7E3E\\u30A2\\u30C3\\u30D7\"#@param [\"フォロー中\",\"定期テスト 成績アップ\"]\n",
+        "種類=\"\\u5B9A\\u671F\\u30C6\\u30B9\\u30C8 \\u6210\\u7E3E\\u30A2\\u30C3\\u30D7\"#@param [\"フォロー中\",\"定期テスト 成績アップ\",\"英検準1級\",\"英検2級\",\"その他趣味・教養\",\"その他\",\"北海道大学\",\"筑波大学\",\"千葉大学\",\"名古屋大学\",\"大阪大学\",\"神戸大学\",\"広島大学\",\"九州大学\",\"東京大学\",\"京都大学\",\"慶應義塾大学\",\"早稲田大学\"]\n",
         "if 種類==\"定期テスト 成績アップ\":\n",
         "  timeline_url=\"study_goal/test\"\n",
         "elif 種類==\"フォロー中\":\n",
